# libccd

./: .gitignore  .travis.yml  BSD-LICENSE  CMakeLists.txt  Makefile.am  Omni.Ccd.vcxproj  README  README.md  ccd-config-version.cmake.in  ccd-config.cmake.in  ccd.pc.in  configure.ac  libccd.vcxproj  libccd.vcxproj.filters  make-release.sh
ccd/: Config.h
doc/: CMakeLists.txt  Makefile  compile-and-install.rst  conf.py  examples.rst  index.rst  reference.rst
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.include  alloc.c  alloc.h  ccd.c  ccddbl.c  compiler.h  config.h.in  dbg.h  gjk.c  gjk.h  gjk_support.c  gjk_support.h  list.h  mpr.c  polytope.c  polytope.h  quat.h  simplex.h  support.c  support.h  vec3.c  vec3.h
src/ccd/: ccd.h  ccd_export.h  compiler.h  config.h  config.h.cmake.in  quat.h  simplex.h  vec3.h
src/ccddbl/: ccddbl_export.h  config.h.m4  quat.h  support.h
src/gjk/: gjk.h  gjk_support.h  simplex.h  vec3.h
src/testsuites/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  bench.c  bench2.c  boxbox.c  boxbox.h  boxcyl.c  boxcyl.h  common.c  common.h  cylcyl.c  cylcyl.h  main.c  mpr_boxbox.c  mpr_boxbox.h  mpr_boxcyl.c  mpr_boxcyl.h  mpr_cylcyl.c  mpr_cylcyl.h  out  polytope.c  spheresphere.c  support.c  support.h  vec3.c  vec3.h
src/testsuites/cu/: CMakeLists.txt  Makefile  cu.c  cu.h
src/testsuites/regressions/: TSBoxBox.err  TSBoxBox.out  TSBoxCyl.out  TSMPRBoxBox.err  TSMPRBoxBox.out  TSPt.err
