SUBDIRS = . testsuites

lib_LTLIBRARIES = libgjk.la

libgjk_la_SOURCES = alloc.c gjk/alloc.h \
		gjk/compiler.h \
		gjk/dbg.h \
		gjk.c gjk/gjk.h \
		gjk_support.c gjk/gjk_support.h \
		gjk/list.h \
		polytope.c gjk/polytope.h \
		gjk/quat.h \
		gjk/simplex.h \
		support.c gjk/support.h \
		vec3.c gjk/vec3.h

